# geodesic-gpt-neox

./: .gitignore  CLAUDE.md  README.md  prebuild_fused_adam.py  prebuild_fused_adam.sbatch  prepare_hf_dataset.py  pretrain_neox.sbatch  pyproject.toml  run_on_compute.sbatch  setup_uv_env.sbatch  setup_uv_env.sh  vscode_tunnel.sh
agent_documentation/: EXAMPLE_TOKENIZE.sh  LLM_TRAINING.md  isambard_specs.txt  old_env_setup.sh
agent_documentation/deep_research_reports/: rm.pytorch.md  uv_python_envs.md
agent_documentation/isambard_cluster/: faq.txt  pytorch_install.txt  slurm_job_management.txt  slurm_job_schedluing.txt  slurm_jobs_docs.txt  storage.txt
configs/: example_config.yml  olmo3_7b.yml  olmo3_7b_eval_mmlu.yml  olmo3_7b_eval_step100.yml  test_training_loss.yml  test_uv_install.yml
configs/early_unlearning/: Models & Results_ Midtraining Safety - Deep Ignorance Unlearning Models - No Metrics.csv  process_models.py
configs/midtraining_unlearning/: run_baseline_evals.sh  submit_all.sh  submit_midtraining.sh  submit_post_training.sh
configs/olmo3/: olmo3_32b_eval_mmlu.yml  olmo3_7b_eval_step0.yml  olmo3_7b_wandb_test.yml
eval_tasks/: eval_adapter.py
huggingface/: batch_submit_checkpoints.sh  convert_hf_gptneox_to_neox.py  convert_hf_olmo_to_neox.py  convert_hf_to_neox.sbatch  convert_neox_olmo_to_hf.py  convert_neox_to_hf_olmo.py  convert_upload_olmo.sh  experiment_hf_mappings.json  submit_all_checkpoints.sh  upload_and_evaluate_checkpoint.py  upload_and_evaluate_checkpoint.sbatch
lm_eval_tasks/deep_ignorance/mmlu_bio/: _mmlu_bio.yaml
lm_eval_tasks/deep_ignorance/mmlu_no_bio/: _generate_configs.py
lm_eval_tasks/deep_ignorance/wmdp_bio_aisi/: _default_template_yaml  _wmdp_bio_ais.yaml  _wmdp_bio_aisi_robust.yaml  _wmdp_bio_aisi_shorcut.yaml  wmdp_bio_aisi_robust_bioweapons_and_bioterrorism.yaml  wmdp_bio_aisi_robust_dual_use_virology.yaml  wmdp_bio_aisi_robust_enhanced_potential_pandemic_pathogens.yaml  wmdp_bio_aisi_robust_expanding_access_to_threat_vectors.yaml  wmdp_bio_aisi_robust_reverse_genetics_and_easy_editing.yaml  wmdp_bio_aisi_robust_viral_vector_research.yaml  wmdp_bio_aisi_shortcut_bioweapons_and_bioterrorism.yaml  wmdp_bio_aisi_shortcut_dual_use_virology.yaml  wmdp_bio_aisi_shortcut_enhanced_potential_pandemic_pathogens.yaml  wmdp_bio_aisi_shortcut_expanding_access_to_threat_vectors.yaml  wmdp_bio_aisi_shortcut_reverse_genetics_and_easy_editing.yaml  wmdp_bio_aisi_shortcut_viral_vector_research.yaml
lm_eval_tasks/deep_ignorance/wmdp_bio_aisi_cloze/: _cloze_template_yaml  _wmdp_bio_aisi_cloze.yaml  _wmdp_bio_aisi_robust_cloze.yaml  (+13 more)
megatron/: training.py
megatron/fused_kernels/: __init__.py
megatron/model/: gpt2_model.py  transformer.py
megatron/neox_arguments/: arguments.py  neox_args.py
post-training/: online_example.sh  online_training.md
tests/: pytest.ini  test_olmo_conversion.py  test_prepare_hf_dataset.py  test_uv_install.py
tools/cluster/: cluster_status.sh  cluster_usage.sh
tools/datasets/: preprocess_data.py  preprocess_data_with_chat_template.py
(+218 files in other folders)
